--- a/Embankment3.html
+++ b/Embankment3.html
@@ -31,7 +31,7 @@
 
 
 
-<a-box position="-20 -15" rotation="" width="5" height="1.5" color="orange" weblink="url: index.html" material="" geometry="">
+<a-box position="-20 0 -15" rotation="" width="5" height="1.5" color="orange" weblink="url: index.html" material="" geometry="">
   <a-text font="kelsonsans" value="Embankment 1" width="15" position="-1 0 3" rotation="" text=""></a-text>
 </a-box>
 
