--- a/Embankment4.html
+++ b/Embankment4.html
@@ -36,15 +36,15 @@
 </a-box>
 
 <a-box position="-10 0 -15" rotation="" width="8" height="3" color="orange" weblink="url: Embankment2.html" material="" geometry="">
-  <a-text font="kelsonsans" value="Embankment 2" width="15" position="-1 0 3" rotation="" text=""></a-text>
+  <a-text font="kelsonsans" value="Embankment 2" width="15" position="-.75 0 3" rotation="" text=""></a-text>
 </a-box>
 
 <a-box position="0 0 -15" rotation="" width="8" height="3" color="orange" weblink="url: Embankment3.html" material="" geometry="">
-  <a-text font="kelsonsans" value="Embankment 3" width="15" position="-3 0 3" rotation="" text=""></a-text>
+  <a-text font="kelsonsans" value="Embankment 3" width="15" position="-2.5 0 3" rotation="" text=""></a-text>
 </a-box>
 
 <a-box position="10 0 -15" rotation="" width="8" height="3" color="orange" weblink="url: Embankment5.html" material="" geometry="">
-  <a-text font="kelsonsans" value="Embankment 5" width="15" position="-5 0 3" rotation="" text=""></a-text>
+  <a-text font="kelsonsans" value="Embankment 5" width="15" position="-4 0 3" rotation="" text=""></a-text>
 </a-box>
 
 
