--- a/deadend2.html
+++ b/deadend2.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Tour A-Frame</title>
-   <script src="https://www.danpacheco.co/aframe/dist/aframe-v1.0.4.min.js"></script>
+    <script src="https://www.danpacheco.co/aframe/dist/aframe-v1.0.4.min.js"></script>
 </head>
 
 <body>
@@ -31,25 +31,24 @@
 
 
 
-<a-box position="-20 0 -15" rotation="" width="5" height="1.5" color="orange" weblink="url: index.html" material="" geometry="">
+<a-box position="-20 0 -15" rotation="" width="5" height="1.5" color="orange" weblink="url: deadend1.html" material="" geometry="">
   <a-text font="kelsonsans" value="Embankment 1" width="15" position="-1 0 3" rotation="" text=""></a-text>
 </a-box>
 
-<a-box position="-10 0 -15" rotation="" width="5" height="1.5" color="orange" weblink="url: Embankment3.html" material="" geometry="">
+<a-box position="-10 0 -15" rotation="" width="5" height="1.5" color="orange" weblink="url: deadend3.html" material="" geometry="">
   <a-text font="kelsonsans" value="Embankment 3" width="15" position="-1 0 3" rotation="" text=""></a-text>
 </a-box>
 
-<a-box position="0 0 -15" rotation="" width="5" height="1.5" color="orange" weblink="url: Embankment4.html" material="" geometry="">
+<a-box position="0 0 -15" rotation="" width="5" height="1.5" color="orange" weblink="url: deadend4.html" material="" geometry="">
   <a-text font="kelsonsans" value="Embankment 4" width="15" position="-1 0 3" rotation="" text=""></a-text>
 </a-box>
 
-<a-box position="10 0 -15" rotation="" width="5" height="1.5" color="orange" weblink="url: Embankment5.html" material="" geometry="">
+<a-box position="10 0 -15" rotation="" width="5" height="1.5" color="orange" weblink="url: deadend5.html" material="" geometry="">
   <a-text font="kelsonsans" value="Embankment 5" width="15" position="-1 0 3" rotation="" text=""></a-text>
 </a-box>
 
 
-
-<a-sky src="EmbankmentDeadEnd2.jpg" rotation="0 -130 0" material="" geometry=""></a-sky>
+<a-sky src="deadend2.jpg" rotation="0 45 0" material="" geometry=""></a-sky>
 
 
 </a-scene>
