--- a/deadend4.html
+++ b/deadend4.html
@@ -31,16 +31,16 @@
 
 
 
-<a-box position="-20 0 -15" rotation="" width="5" height="1.5" color="orange" weblink="url: deadend2.html" material="" geometry="">
+<a-box position="-20 0 -15" rotation="" width="5" height="1.5" color="orange" weblink="url: deadend1.html" material="" geometry="">
+  <a-text font="kelsonsans" value="Embankment 1" width="15" position="-1 0 3" rotation="" text=""></a-text>
+</a-box>
+
+<a-box position="-10 0 -15" rotation="" width="5" height="1.5" color="orange" weblink="url: deadend2.html" material="" geometry="">
   <a-text font="kelsonsans" value="Embankment 2" width="15" position="-1 0 3" rotation="" text=""></a-text>
 </a-box>
 
-<a-box position="-10 0 -15" rotation="" width="5" height="1.5" color="orange" weblink="url: deadend3.html" material="" geometry="">
+<a-box position="0 0 -15" rotation="" width="5" height="1.5" color="orange" weblink="url: deadend3.html" material="" geometry="">
   <a-text font="kelsonsans" value="Embankment 3" width="15" position="-1 0 3" rotation="" text=""></a-text>
-</a-box>
-
-<a-box position="0 0 -15" rotation="" width="5" height="1.5" color="orange" weblink="url: deadend4.html" material="" geometry="">
-  <a-text font="kelsonsans" value="Embankment 4" width="15" position="-1 0 3" rotation="" text=""></a-text>
 </a-box>
 
 <a-box position="10 0 -15" rotation="" width="5" height="1.5" color="orange" weblink="url: deadend5.html" material="" geometry="">
@@ -48,7 +48,7 @@
 </a-box>
 
 
-<a-sky src="deadend.jpg" rotation="0 45 0" material="" geometry=""></a-sky>
+<a-sky src="deadend4.jpg" rotation="0 45 0" material="" geometry=""></a-sky>
 
 
 </a-scene>
