--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
 
 <a-box position="-20 0 -15" rotation="" width="5" height="1.5" color="orange" weblink="url: deadend2.html" material="" geometry="">
-  <a-text font="kelsonsans" value="Elizabeth Street" width="10" position="-.6 0 -3" rotation="" text=""></a-text>
+  <a-text font="kelsonsans" value="Elizabeth Street" width="10" position="-1 0 -.6" rotation="" text=""></a-text>
 </a-box>
 
 <a-box position="-10 0 -15" rotation="" width="5" height="1.5" color="orange" weblink="url: deadend3.html" material="" geometry="">
