--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 </a-box>
 
 <a-box position="-10 0 -15" rotation="" width="5" height="1.5" color="orange" weblink="url: deadend3.html" material="" geometry="">
-  <a-text font="kelsonsans" value="Embankment 3" width="15" position="-1 0 3" rotation="" text=""></a-text>
+  <a-text font="kelsonsans" value="East Corning" width="10" position="-1 0 .6" rotation="" text=""></a-text>
 </a-box>
 
 <a-box position="0 0 -15" rotation="" width="5" height="1.5" color="orange" weblink="url: deadend4.html" material="" geometry="">
