--- a/index.html
+++ b/index.html
@@ -31,20 +31,20 @@
 
 
 
-<a-box position="-10 5 -15" rotation="" width="5" height="1.5" color="orange" weblink="url: deadend2.html" material="" geometry="">
+<a-box position="-10 5 -15" rotation="" width="5" height="1.5" color="df5532" weblink="url: deadend2.html" material="" geometry="">
   <a-text font="kelsonsans" value="Elizabeth Street" width="10" position="-1.1 0 .6" rotation="" text=""></a-text>
 </a-box>
 
-<a-box position="-10 0 -15" rotation="" width="5" height="1.5" color="orange" weblink="url: deadend3.html" material="" geometry="">
+<a-box position="-10 0 -15" rotation="" width="5" height="1.5" color="df5532" weblink="url: deadend3.html" material="" geometry="">
   <a-text font="kelsonsans" value="East Corning" width="10" position="-1 0 .6" rotation="" text=""></a-text>
 </a-box>
 
-<a-box position="0 0 -15" rotation="" width="5" height="1.5" color="orange" weblink="url: deadend4.html" material="" geometry="">
+<a-box position="0 0 -15" rotation="" width="5" height="1.5" color="df5532" weblink="url: deadend4.html" material="" geometry="">
   <a-text font="kelsonsans" value="Embankment 4" width="15" position="-1 0 3" rotation="" text=""></a-text>
 </a-box>
 
-<a-box position="0 5 -15" rotation="" width="5" height="1.5" color="orange" weblink="url: deadend5.html" material="" geometry="">
-  <a-text font="kelsonsans" value="Embankment 5" width="15" position="-1 0 3" rotation="" text=""></a-text>
+<a-box position="0 5 -15" rotation="" width="5" height="1.5" color="df5532" weblink="url: deadend5.html" material="" geometry="">
+  <a-text font="kelsonsans" value="Hobart Ave" width="15" position="-1 0 3" rotation="" text=""></a-text>
 </a-box>
 
 
