--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 </a-box>
 
 <a-box position="0 0 -15" rotation="" width="5" height="1.5" color="#df5532" weblink="url: deadend4.html" material="" geometry="">
-  <a-text font="kelsonsans" value="Embankment 4" width="15" position="-1 0 .6" rotation="" text=""></a-text>
+  <a-text font="kelsonsans" value="East Ostrander" width="15" position="-1 0 .6" rotation="" text=""></a-text>
 </a-box>
 
 <a-box position="0 5 -15" rotation="" width="5" height="1.5" color="#df5532" weblink="url: deadend5.html" material="" geometry="">
