--- a/index.html
+++ b/index.html
@@ -32,15 +32,15 @@
 
 
 <a-box position="-10 5 -15" rotation="" width="5" height="1.5" color="#df5532" weblink="url: deadend2.html" material="" geometry="">
-  <a-text font="kelsonsans" value="Elizabeth Street" width="10" position="-1.1 0 .6" rotation="" text=""></a-text>
+  <a-text font="kelsonsans" value="Elizabeth St." width="10" position="-1.1 0 .6" rotation="" text=""></a-text>
 </a-box>
 
 <a-box position="-10 0 -15" rotation="" width="5" height="1.5" color="#df5532" weblink="url: deadend3.html" material="" geometry="">
-  <a-text font="kelsonsans" value="East Corning" width="10" position="-1 0 .6" rotation="" text=""></a-text>
+  <a-text font="kelsonsans" value="East Corning Ave" width="10" position="-1 0 .6" rotation="" text=""></a-text>
 </a-box>
 
 <a-box position="0 0 -15" rotation="" width="5" height="1.5" color="#df5532" weblink="url: deadend4.html" material="" geometry="">
-  <a-text font="kelsonsans" value="East Ostrander" width="10" position="-1 0 .6" rotation="" text=""></a-text>
+  <a-text font="kelsonsans" value="East Ostrander Ave" width="10" position="-1 0 .6" rotation="" text=""></a-text>
 </a-box>
 
 <a-box position="0 5 -15" rotation="" width="5" height="1.5" color="#df5532" weblink="url: deadend5.html" material="" geometry="">
