--- a/deadend2.html
+++ b/deadend2.html
@@ -31,24 +31,24 @@
 
 
 
-<a-box position="-20 0 -15" rotation="" width="5" height="1.5" color="orange" weblink="url: deadend1.html" material="" geometry="">
-  <a-text font="kelsonsans" value="Embankment 1" width="15" position="-1 0 3" rotation="" text=""></a-text>
+<a-box position="-10 5 -15" rotation="" width="5" height="1.5" color="#df5532" weblink="url: index.html" material="" geometry="">
+  <a-text font="kelsonsans" value="Woodland Ave" width="10" position="-1.1 0 .6" rotation="" text=""></a-text>
 </a-box>
 
-<a-box position="-10 0 -15" rotation="" width="5" height="1.5" color="orange" weblink="url: deadend3.html" material="" geometry="">
-  <a-text font="kelsonsans" value="Embankment 3" width="15" position="-1 0 3" rotation="" text=""></a-text>
+<a-box position="-10 0 -15" rotation="" width="5" height="1.5" color="#df5532" weblink="url: deadend3.html" material="" geometry="">
+  <a-text font="kelsonsans" value="East Corning Ave" width="10" position="-1.5 0 .6" rotation="" text=""></a-text>
 </a-box>
 
-<a-box position="0 0 -15" rotation="" width="5" height="1.5" color="orange" weblink="url: deadend4.html" material="" geometry="">
-  <a-text font="kelsonsans" value="Embankment 4" width="15" position="-1 0 3" rotation="" text=""></a-text>
+<a-box position="0 0 -15" rotation="" width="5" height="1.5" color="#df5532" weblink="url: deadend4.html" material="" geometry="">
+  <a-text font="kelsonsans" value="East Ostrander Ave" width="10" position="-1.9 0 .6" rotation="" text=""></a-text>
 </a-box>
 
-<a-box position="10 0 -15" rotation="" width="5" height="1.5" color="orange" weblink="url: deadend5.html" material="" geometry="">
-  <a-text font="kelsonsans" value="Embankment 5" width="15" position="-1 0 3" rotation="" text=""></a-text>
+<a-box position="0 5 -15" rotation="" width="5" height="1.5" color="#df5532" weblink="url: deadend5.html" material="" geometry="">
+  <a-text font="kelsonsans" value="Hobart Ave" width="10" position="-1. 0 .6" rotation="" text=""></a-text>
 </a-box>
 
 
-<a-sky src="deadend2.jpg" rotation="0 45 0" material="" geometry=""></a-sky>
+<a-sky src="deadend.jpg" rotation="0 45 0" material="" geometry=""></a-sky>
 
 
 </a-scene>
