--- a/index.html
+++ b/index.html
@@ -47,6 +47,9 @@
   <a-text font="kelsonsans" value="Hobart Ave" width="10" position="-1. 0 .6" rotation="" text=""></a-text>
 </a-box>
 
+<a-box position="-5 -5 -15" rotation="" width="5" height="1.5" color="#303030" weblink="url: index.html" material="" geometry="">
+  <a-text font="kelsonsans" value="Woodland Ave" width="10" position="-1. 0 .6" rotation="" text=""></a-text>
+</a-box>
 
 <a-sky src="deadend.jpg" rotation="0 45 0" material="" geometry=""></a-sky>
 
