--- a/deadend2.html
+++ b/deadend2.html
@@ -31,7 +31,7 @@
 
 
 
-<a-box position="-10 5 -15" rotation="" width="5" height="1.5" color="#df5532" weblink="url: deadend2.html" material="" geometry="">
+<a-box position="-10 5 -15" rotation="" width="5" height="1.5" color="#303030" weblink="url: #" material="" geometry="">
   <a-text font="kelsonsans" value="Elizabeth St" width="10" position="-1.1 0 .6" rotation="" text=""></a-text>
 </a-box>
 
@@ -47,11 +47,11 @@
   <a-text font="kelsonsans" value="Hobart Ave" width="10" position="-1. 0 .6" rotation="" text=""></a-text>
 </a-box>
 
-<a-box position="-5 -5 -15" rotation="" width="5" height="1.5" color="#303030" weblink="url: #" material="" geometry="">
+<a-box position="-5 -5 -15" rotation="" width="5" height="1.5" color="#df5532" weblink="url: index.html" material="" geometry="">
   <a-text font="kelsonsans" value="Woodland Ave" width="10" position="-1.4 0 .6" rotation="" text=""></a-text>
 </a-box>
 
-<a-sky src="deadend.jpg" rotation="0 45 0" material="" geometry=""></a-sky>
+<a-sky src="deadend2.jpg" rotation="0 45 0" material="" geometry=""></a-sky>
 
 
 </a-scene>
