--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 </head>
 
 <body>
-<a-scene inspector="" keyboard-shortcuts="" screenshot="" vr-mode-ui="enabled: false" device-orientation-permission-ui="" wasd-controls="enabled: false">
+<a-scene inspector="" keyboard-shortcuts="" screenshot="" vr-mode-ui="enabled: false" device-orientation-permission-ui="" >
 
-<a-entity cursor="rayOrigin: mouse" raycaster="direction: -0.3035078853305619 0.595726236522669 -0.7436351354398926; useWorldCoordinates: true"></a-entity>
+<a-entity cursor="rayOrigin: mouse" wasd-controls="enabled: false" raycaster="direction: -0.3035078853305619 0.595726236522669 -0.7436351354398926; useWorldCoordinates: true"></a-entity>
 
 <script>
   AFRAME.registerComponent("weblink", {
