--- a/deadend2.html
+++ b/deadend2.html
@@ -9,9 +9,9 @@
 </head>
 
 <body>
-<a-scene inspector="" keyboard-shortcuts="" screenshot="" vr-mode-ui="" device-orientation-permission-ui="">
+<a-scene inspector="" keyboard-shortcuts="" screenshot="" vr-mode-ui="enabled: false" device-orientation-permission-ui="">
 
-<a-entity cursor="rayOrigin: mouse" raycaster="direction: -0.3035078853305619 0.595726236522669 -0.7436351354398926; useWorldCoordinates: true"></a-entity>
+<a-entity camera look-controls position="0 1.6 0" wasd-controls="enabled: false" cursor="rayOrigin: mouse" raycaster="direction: -0.3035078853305619 0.595726236522669 -0.7436351354398926; useWorldCoordinates: true"></a-entity>
 
 <script>
   AFRAME.registerComponent("weblink", {
